--- a/web.adoc
+++ b/web.adoc
@@ -1,5 +1,12 @@
 # Teams API website
 
+:TEAMS_SITE: TeamsPPU
+:TEAMS_HOST: Netlify
+:TEAMS_URL: https://teamsppu.netlify.app
+:TEAMS_STATUS: Available  
+:TEAMS_VERSION: 1.0
+:imagesdir: images
+
 ## What is the teams website
 It is a location to log all NFL teams
 
@@ -8,3 +15,10 @@ The site is hosted on netlify
 
 ## What programming languages were utilized
 - HTML, CSS, JavaScript
+
+[grid="rows",format="csv"]
+[oiptions="header",cols="^,<,<s,<,>m"]
+|===========================
+SiteName,Host,URL,Status,Version
+`{TEAMS_SITE}`,`{TEAMS_HOST}`,`{TEAMS_URL}`,`{TEAMS_STATUS}`,`{TEAMS_VERSION}`
+|===========================
